Refactoring
CHANGES:
- Improved interaction with blocks by using inheritance;
- GameBoard and Block's subclasses are now handled using booleans instead of chars;
- Game saves are now handled on a per-user basis, it's now possible to have multiple saves;
- Misc. improvements in method coherence and coupling.

FIXED BUGS:
- Block rotation now works properly when rotating more than once;
- Fixed an issue where loading an existant game and then starting a new one would just re-load the current game.